# modernfortran-libs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  modernfortran-libs.pc.cmake.in
app/: CMakeLists.txt  test.dat.in  test_dlmreadwrite.f90  test_doubly_linkedlist.f90
docs/: Doxyfile.cmake.in
src/: CMakeLists.txt  mod_doubly_linkedlist.f90  mod_io.f90
